--- a/app/templates/home/footer.html
+++ b/app/templates/home/footer.html
@@ -1,68 +1,40 @@
-<footer class="py-8 py-md-11 bg-gray-200">
+<footer class="py-8 py-md-11 bg-black">
     <div class="container">
-      <div class="row">
-        <div class="col-12 col-md-4 col-lg-3">
-  
-          <!-- Text -->
-          <p class="text-gray-700 mb-2">
-            2020 Waffler &copy;
-          </p>
-  
-          <!-- Social -->
-          <ul class="list-unstyled list-inline list-social mb-6 mb-md-0">
-            <li class="list-inline-item list-social-item mr-3">
-              <a href="https://twitter.com/wafflerbot" class="text-decoration-none">
-                <img src="{{ url_for('static', filename='img/icons/social/twitter.svg') }}" class="list-social-icon">
-              </a>
-            </li>
-          </ul>
+        <div class="row">
+            <div class="col">
+                <img src="./assets/img/brand.svg" class="footer-brand img-fluid mb-2">
+
+                <p class="text-gray-700 mb-2">
+                    A better way to build.
+                </p>
+            </div>
+
+            <div class="col-4">
+                <!-- Heading -->
+                <h6 class="font-weight-bold text-uppercase text-gray-700">
+                    Legal
+                </h6>
+
+                <!-- List -->
+                <ul class="list-unstyled text-muted mb-0">
+                    <li class="mb-3">
+                        <a href="#!" class="text-reset">
+                            Documentation
+                        </a>
+                    </li>
+                    <li class="mb-3">
+                        <a href="#!" class="text-reset">
+                            Changelog
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#!" class="text-reset">
+                            Pagebuilder
+                        </a>
+                    </li>
+                </ul>
+
+            </div>
         </div>
-  
-        <div class="col-12 col-md-8 col-lg-5">
-          <p class="text-gray-700 mb-2">
-            This product is a piece of software built to increase your chances
-            of winning exclusive sneakers. By purchasing Waffler, you
-            are abiding by our terms and conditions, and you understand
-            that the software does not guarantee any winnings from raffles,
-            but does drastically increase the chances.
-          </p>
-        </div>
-  
-        <div class="col-6 col-md-4 col-lg-2">
-  
-          <!-- Heading -->
-          <a class="text-gray-700" href="#">
-            Home<br>
-          </a>
-  
-          <a class="text-gray-700" href="#features">
-            Features<br>
-          </a>
-  
-          <a class="text-gray-700" href="#about">
-            About<br>
-          </a>
-  
-          <a class="text-gray-700" href="#pricing">
-            Pricing<br>
-          </a>
-  
-          <a class="text-gray-700" href="#faq">
-            FAQ<br>
-          </a>
-        </div>
-        <div class="col-6 col-md-4 col-lg-2">
-          <a class="font-weight-bold text-gray-700">
-            Contact<br>
-          </a>
-  
-          <a class="text-gray-700" href="https://twitter.com/wafflerbot" target="_blank">
-            Twitter<br>
-          </a>
-  
-          <a class="text-gray-700">
-            contact@waffler.io<br>
-          </a>
-        </div>
-      </div> <!-- / .container -->
-  </footer>
+    </div>
+</footer>
