--- a/app/templates/home/header.html
+++ b/app/templates/home/header.html
@@ -1,1 +1,28 @@
-header
+<nav class="navbar navbar-light navbar-expand-lg border-bottom mb-3" style="z-index: 3;">
+
+    <!-- Brand -->
+    <a class="navbar-brand" href="index.html">
+      <img src="app\static\img\mysignals_logo.jpg">
+    </a>
+
+    <!-- Toggler -->
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    
+    <!-- Collapse -->
+    <div class="collapse navbar-collapse">
+
+      <!-- Search -->
+      <form class="form-inline ml-auto">
+        <input type="search" class="form-control form-control-sm" placeholder="Search">
+      </form>
+
+      <!-- Avatar -->
+      <a href="#" class="avatar avatar-online ml-5" data-toggle="dropdown">
+        <img src="../assets/img/avatars/avatar-1.jpg" alt="..." class="avatar-img rounded-circle">
+      </a>
+
+    </div>
+    
+  </nav>
