Added card sizing

--- a/app/templates/home/card.html
+++ b/app/templates/home/card.html
@@ -1,4 +1,4 @@
-<div class="col-12 col-xl-4 d-flex">
+<div class="col-6 col-xl-4 col-lg-6 col-md-8 col-sm-10 d-flex">
     <div class="card h-100 bg-dark rounded-lg">
         <a class="card-body my-auto" href="#!">
             <h3 class="mt-auto font-weight-bold text-white">
