Added Navbar, Logo Updated & Path Fixed
- added navbar
- logo updated
- logo path fixed so logo actually shows up
- placed logo into home page
-

--- a/app/templates/home/home.html
+++ b/app/templates/home/home.html
@@ -3,13 +3,13 @@
 {% block content %}
 {% include "home/header.html" %}
 
-<div class="main-content mt-n11 pt-12 pb-8 pt-md-14 pb-md-11 bg-black bg-pattern-2">
+<div class="main-content mt-n12 pt-12 pb-8 pt-md-14 pb-md-11 bg-black bg-pattern-2">
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-12 col-lg-10 text-center">
                 <h1 class="display-1 font-weight-bold text-white aos-init aos-animate" data-aos="fade-up"
                     data-aos-delay="50">
-                    mySignals
+                    <img src= {{ url_for('static', filename = 'img/mysignals_logo.png') }} width="275" height="100">
                 </h1>
 
                 <p class="lead text-gray-500 mb-6 mx-auto aos-init aos-animate" data-aos="fade-up" data-aos-delay="100"
