Footer Logo & Spacing

--- a/app/templates/home/card.html
+++ b/app/templates/home/card.html
@@ -2,15 +2,24 @@
     <div class="card h-100 bg-dark rounded-lg">
         <a class="card-body my-auto" href="#!">
             <h3 class="mt-auto font-weight-bold text-white">
-                It's the little touches that make memories.
+                New FREE signal Buy #WAVES/#USDT at #BINANCE
             </h3>
 
             <p class="mb-0 text-muted">
-                Once you have your rental posted, you should focus on how you can differentiate your home with little
-                touches.
-                Chocolates, specialty coffee, fast wifi, nice toiletries, or a personal note. Small touches can make a
-                huge
-                difference.
+                #521729, 130th today. 06-Jan-2021 19:32:47 UTC
+
+                Entry Zone: 5.6398325 - 6.068859 
+                Current ask: 5.955 
+                Target 1: 6.30249 (5.84%) 
+                Target 2: 6.56469 (10.24%) 
+                Target 3: 7.00179 (17.58%) 
+                Stop loss: 5.50547667 (7.55%)
+
+                Volume #WAVES: 23,776.74 
+                Volume #USDT: 138,191.71 RSI: 38.40 (NEUTRAL)
+
+                SHORT TERM (up to 7 days) 
+                Risk: 3/5 (Medium) - Invest up to 5% of your portfolio R/R ratio: 1:1.5️
             </p>
         </a>
 
@@ -24,7 +33,7 @@
             </div>
 
             <h6 class="text-uppercase text-muted mr-2 mb-0">
-                Bitcoin
+                #WAVES
             </h6>
 
             <p class="h6 text-uppercase text-muted mb-0 ml-auto">
