--- a/app/templates/home/home.html
+++ b/app/templates/home/home.html
@@ -14,7 +14,7 @@
 
                 <p class="lead text-gray-500 mb-6 mx-auto aos-init aos-animate" data-aos="fade-up" data-aos-delay="100"
                     style="max-width: 500px;">
-                    Crypto currency signals
+                    Cryptocurrency Signals
                 </p>
             </div>
         </div>
