--- a/app/templates/home/footer.html
+++ b/app/templates/home/footer.html
@@ -1,15 +1,15 @@
-<footer class="py-8 py-md-11 bg-black">
+<footer class="py-8 py-md-8 bg-black">
     <div class="container">
         <div class="row">
             <div class="col">
-                <img src="./assets/img/brand.svg" class="footer-brand img-fluid mb-2">
+                <img src= {{ url_for('static', filename = 'img/mysignals_logo.png') }} width="130" height="50" class="footer-brand img-fluid mb-2">
 
                 <p class="text-gray-700 mb-2">
-                    A better way to build.
+                    Cryptocurrency Signals 
                 </p>
             </div>
 
-            <div class="col-4">
+            <div class="col-2">
                 <!-- Heading -->
                 <h6 class="font-weight-bold text-uppercase text-gray-700">
                     Legal
