Added database query

--- a/app/templates/home/footer.html
+++ b/app/templates/home/footer.html
@@ -32,6 +32,11 @@
                             Pagebuilder
                         </a>
                     </li>
+                    <li>
+                        <a href="/admin" class="text-reset">
+                            Admin
+                        </a>
+                    </li>
                 </ul>
 
             </div>
