Added discord auth

--- a/app/templates/home/footer.html
+++ b/app/templates/home/footer.html
@@ -33,7 +33,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="/admin" class="text-reset">
+                        <a class="text-reset" href="{{ url_for('admin.home') }}">
                             Admin
                         </a>
                     </li>
